# leitor_visualizador_cenas_3d

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets/models/: README.txt  cube.mtl
shaders/: phong.frag  phong.vert  unlit.frag  unlit.vert
src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object3D.cpp  Object3D.h  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  main.cpp
